Major update: mobile UI, navigation, API integration, server logic improvements

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,17 @@ dist
 server/public
 vite.config.ts.*
 *.tar.gz
+# Expo
+.expo/
+.expo-shared/
+
+# Env
+.env
+.env.*
+
+# Logs
+*.log
+
+# IDE
+.vscode/
+.idea/
