--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "drizzle-orm": "^0.39.3",
     "drizzle-zod": "^0.7.1",
     "embla-carousel-react": "^8.6.0",
+    "expo": "~54",
     "express": "^5.0.1",
     "express-session": "^1.19.0",
     "framer-motion": "^11.13.1",
@@ -81,12 +82,13 @@
     "pdf-parse": "^2.4.5",
     "pg": "^8.16.3",
     "playwright": "^1.58.2",
-    "react": "^18.3.1",
+    "react": "19.2.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "19.2.0",
     "react-hook-form": "^7.55.0",
     "react-i18next": "^16.5.4",
     "react-icons": "^5.4.0",
+    "react-native-web": "^0.21.2",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.2",
     "resend": "^4.0.0",
