--- a/mobile/package.json
+++ b/mobile/package.json
@@ -19,13 +19,16 @@
     "@react-navigation/native-stack": "^7.12.0",
     "@tanstack/react-query": "^5.90.20",
     "expo": "~54.0.33",
+    "expo-blur": "~14.1.5",
     "expo-document-picker": "~14.0.8",
     "expo-font": "~14.0.11",
+    "expo-image-picker": "~17.0.10",
     "expo-localization": "~17.0.8",
     "expo-notifications": "~0.32.16",
     "expo-secure-store": "~15.0.8",
     "expo-status-bar": "~3.0.9",
     "expo-system-ui": "~6.0.9",
+    "expo-updates": "~29.0.16",
     "i18next": "^23.16.8",
     "react": "19.1.0",
     "react-i18next": "^14.1.3",
