--- a/mobile/package.json
+++ b/mobile/package.json
@@ -14,13 +14,16 @@
   "dependencies": {
     "@expo/ngrok": "^4.1.3",
     "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/bottom-tabs": "^7.12.0",
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/native-stack": "^7.12.0",
     "@tanstack/react-query": "^5.90.20",
     "expo": "~54.0.33",
-    "expo-blur": "~14.1.5",
+    "expo-av": "~16.0.8",
+    "expo-blur": "~15.0.8",
     "expo-document-picker": "~14.0.8",
+    "expo-file-system": "~19.0.21",
     "expo-font": "~14.0.11",
     "expo-image-picker": "~17.0.10",
     "expo-localization": "~17.0.8",
