--- a/mobile/eas.json
+++ b/mobile/eas.json
@@ -1,31 +1,15 @@
 {
   "cli": {
-    "version": ">= 7.0.0",
-    "appVersionSource": "remote"
+    "version": ">= 3.0.0"
   },
   "build": {
-    "development": {
-      "developmentClient": true,
-      "distribution": "internal",
-      "env": {
-        "API_URL": "https://health-insight-ai.replit.app"
-      }
-    },
-    "preview": {
-      "distribution": "internal",
-      "env": {
-        "API_URL": "https://health-insight-ai.replit.app"
-      }
-    },
     "production": {
+      "ios": {
+        "distribution": "store"
+      },
       "android": {
         "buildType": "app-bundle"
-      },
-      "env": {
-        "API_URL": "https://health-insight-ai.replit.app"
-      },
-      "autoIncrement": true,
-      "node": "20.18.0"
+      }
     }
   },
   "submit": {
@@ -35,9 +19,9 @@
         "track": "production"
       },
       "ios": {
-        "appleId": "your-apple-id@email.com",
-        "ascAppId": "your-app-store-connect-app-id",
-        "appleTeamId": "your-team-id"
+        "appleId": "khalifamuae@gmail.com",
+        "ascAppId": "6759469048",
+        "appleTeamId": "TL3YF5A526"
       }
     }
   }
